initContainersOnly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: getfood
  name: getfood
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: getfood
  strategy: {}
  template:
    metadata:
      labels:
        deployment: getfood
        app.kubernetes.io/part-of: foods
    spec:
      volumes:
      - name: albums-volume
        configMap:
          name: db-config
