mydeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: getfood
  name: getfood
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: getfood
  strategy: {}
  template:
    metadata:
      labels:
        deployment: getfood
        app.kubernetes.io/part-of: foods
    spec:
      containers:
        - name: getfood
          image: quay.io/rhdevelopers/food-service:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      strategy:
        type: RollingUpdate
        rollingUpdate:
          maxUnavailable: 25%
          maxSurge: 25%
      revisionHistoryLimit: 10
      progressDeadlineSeconds: 600

      volumes:
      - name: albums-volume
        configMap:
          name: db-config
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: getfood
  name: getfood
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: getfood
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: getfood
  labels:
    app: getfood
spec:
  to:
    kind: Service
    name: getfood
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
